consumer test is added.